--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "MERN Project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend/server,js",
+    "server": "nodemon backend/server.js",
   },
   "author": "Onelio Viera",
   "license": "ISC",
@@ -13,5 +14,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
